objects/tspa__File_Transfer_Folder__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>tspa__Folder_Id__c</fullName>
        <label>Folder Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__ParentFolderId__c</fullName>
        <label>Parent Folder Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Root_Library_Id__c</fullName>
        <label>Root Library Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Type__c</fullName>
        <label>Type</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__isAssetLibrary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAssetLibrary</label>
        <type>Checkbox</type>
    </fields>
    <label>VRA File Transfer Folder</label>
    <listViews>
        <fullName>tspa__All_fields</fullName>
        <columns>NAME</columns>
        <columns>tspa__Folder_Name__c</columns>
        <columns>tspa__Folder_Id__c</columns>
        <columns>tspa__Root_Library_Id__c</columns>
        <columns>tspa__isAssetLibrary__c</columns>
        <columns>tspa__ParentFolderId__c</columns>
        <columns>tspa__Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All fields</label>
    </listViews>
</CustomObject>